--- a/.github/workflows/pullRequest.yml
+++ b/.github/workflows/pullRequest.yml
@@ -6,14 +6,14 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
-      - name: Make a new env. file
+      - name: Make a new .env file
         uses: SpicyPizza/create-envfile@v1
         with:
           envkey_POSTGRES_USER: ${{secrets.ENVKEY_POSTGRES_USER}}
           envkey_POSTGRES_PASSWORD: ${{secrets.ENVKEY_POSTGRES_PASSWORD}}
           envkey_POSTGRES_DB: ${{secrets.ENVKEY_POSTGRES_DB}}
           envkey_DATABASE_URL: ${{secrets.ENVKEY_DATABASE_URL}}
-          file_name: .env.test
+          file_name: ".env.test"
       - name: Run tests
         run: docker compose -f docker-compose-test.yml run node_app_ci_test npm run test
       - name: Build
