--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -1,25 +1,20 @@
 version: "3"
 services:
-  db_ci_test:
+  db:
     image: postgres
-    container_name: db_ci_test
+    container_name: db
     restart: always
     ports:
-      - 2432: 5432
+      - 2345:5432
     env_file:
       - .env.test
-    volumes:
-      - postgres_test:var/lib/postgresql/data
 
-  node_app_ci_test:
-    container_name: node_app_ci_test
+  node_app:
+    container_name: node_app
     build: .
     ports:
       - 5000:5000
     env_file:
       - .env.test
     depends_on:
-      - db_ci_test
-
-volumes:
-  postgres_test:
+      - db
