--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -1,20 +1,25 @@
 version: "3"
 services:
-  db:
+  db_ci_test:
     image: postgres
-    container_name: db
+    container_name: db_ci_test
     restart: always
     ports:
-      - 2345:5432
+      - 2432: 5432
     env_file:
       - .env.test
+    volumes:
+      - postgres_test:var/lib/postgresql/data
 
-  node_app:
-    container_name: node_app
+  node_app_ci_test:
+    container_name: node_app_ci_test
     build: .
     ports:
       - 5000:5000
     env_file:
       - .env.test
     depends_on:
-      - db
+      - db_ci_test
+
+volumes:
+  postgres_test:
