--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -1,20 +1,20 @@
 version: "3"
 services:
-  db_ci_test:
+  db_cli:
     image: postgres
-    container_name: db_ci_test
+    container_name: db_cli
     restart: always
     ports:
       - 2432: 5432
     env_file:
       - .env.test
 
-  node_app_ci_test:
-    container_name: node_app_ci_test
+  node_app_cli:
+    container_name: node_app_cli
     build: .
     ports:
       - 5000:5000
     env_file:
       - .env.test
     depends_on:
-      - db_ci_test
+      - db_cli
