--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -1,20 +1,27 @@
 version: "3"
 services:
+  services:
+
   db_cli:
     image: postgres
     container_name: db_cli
     restart: always
     ports:
-      - 2432: 5432
+      - 2432:5432
     env_file:
       - .env.test
+    volumes:
+      - postgres:/var/lib/postgresql/data
 
   node_app_cli:
     container_name: node_app_cli
     build: .
     ports:
       - 5000:5000
-    env_file:
-      - .env.test
     depends_on:
       - db_cli
+    env_file:
+      - .env.test
+
+volumes:
+  postgres:
